# Text-Search-and-Mining-Discipline-Project

./: .gitignore  README.md  arrival-at-kraghammer-transcript-corpus.csv  chatgpt.py  classification.csv  classify.py  metrics.py  predictions.pkl  pyproject.toml  textual-clean-code.py  web-scraping-code.py
classifications/: manual_classify.py
prompts/: base_prompt.txt  generate_prompts.py
transcripts/: cr1-1-transcript-corpus.csv  cr1-10-transcript-corpus.csv  cr1-100-transcript-corpus.csv  cr1-101-transcript-corpus.csv  cr1-102-transcript-corpus.csv  cr1-102.01-transcript-corpus.csv  cr1-103-transcript-corpus.csv  cr1-104-transcript-corpus.csv  cr1-105-transcript-corpus.csv  cr1-106-transcript-corpus.csv  cr1-107-transcript-corpus.csv  cr1-108-transcript-corpus.csv  cr1-109-transcript-corpus.csv  cr1-11-transcript-corpus.csv  cr1-110-transcript-corpus.csv  cr1-111-transcript-corpus.csv  cr1-111.01-transcript-corpus.csv  cr1-112-transcript-corpus.csv  cr1-112.01-transcript-corpus.csv  cr1-113-transcript-corpus.csv  cr1-114-transcript-corpus.csv  cr1-115-transcript-corpus.csv  cr1-115.01-transcript-corpus.csv  cr1-115.02-transcript-corpus.csv  cr1-115.03-transcript-corpus.csv  cr1-115.04-transcript-corpus.csv  cr1-115.05-transcript-corpus.csv  cr1-115.06-transcript-corpus.csv  cr1-115.07-transcript-corpus.csv  cr1-115.08-transcript-corpus.csv  cr1-115.09-transcript-corpus.csv  cr1-115.10-transcript-corpus.csv  cr1-115.11-transcript-corpus.csv  cr1-115.12-transcript-corpus.csv  cr1-12-transcript-corpus.csv  cr1-13-transcript-corpus.csv  cr1-14-transcript-corpus.csv  (+103 more)
