[tool.poetry]
name = "bmt"
version = "0.1.0"
description = ""
authors = ["Carlos <carlosh.serrado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
groq = "^0.9.0"
nltk = "^3.8.1"
pandas = "^2.2.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
load-dotenv = "^0.1.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
